syntax = "proto3";
// protobuf package
package ecommerce;
// go package
option go_package = "./;ecommerce";

// or use google.protobuf.StringValue
// after import "google/protobuf/wrappers.proto";
message ProductID {
    string value = 1;
}

// 
message Product {
    string id = 1;
    string name = 2;
    string description = 3;
    float price = 4;
}

service ProductInfo {
    rpc addProduct(Product) returns (ProductID);
    rpc getProduct(ProductID) returns (Product);
}
